--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -7,3 +7,8 @@ spring:
     url: jdbc:mysql://localhost:3306/test
     username: root
     password: root
+
+
+mybatis:
+  mapper-locations: classpath*:mybatis/*Mapper.xml
+  type-aliases-package: com.cyblogs.springboot.dao
