--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <module>springboot-learn-mybatis</module>
         <module>springboot-learn-configuration</module>
         <module>springboot-learn-docker</module>
+        <module>springboot-starters</module>
+        <module>springboot-learn-web-demo</module>
     </modules>
 
     <packaging>pom</packaging>
